--- a/PromptService/package.json
+++ b/PromptService/package.json
@@ -4,14 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "type": "commonjs",
+    "type": "module",
     "dependencies": {
         "@octokit/rest": "^21.1.1",
         "cors": "^2.8.5",
@@ -19,6 +17,9 @@
         "express": "^5.1.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.26.9",
+        "babel-jest": "^29.7.0",
+        "cross-env": "^7.0.3",
         "jest": "^29.7.0"
     }
 }
