--- a/PromptService/tsconfig.json
+++ b/PromptService/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es6",        // Specify ECMAScript target version
-    "module": "commonjs",    // Specify module code generation
-    "outDir": "dist",       // Specify output directory
-    "rootDir": "src",       // Specify the root directory of the source files
-    "strict": true,       // Enable all strict type-checking options
-    "esModuleInterop": true,  // Enables interoperability between CommonJS and ES modules
-    "sourceMap": true      // Generate source map files (.map)
+    "target": "ES5",
+    "module": "CommonJS",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "moduleResolution": "node"
   },
-  "include": ["src"],         // Specify which files to include in compilation
-  "exclude": ["node_modules"] // Specify which files to exclude
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
