--- a/PromptService/package.json
+++ b/PromptService/package.json
@@ -15,8 +15,11 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
         "@types/unescape-js": "^1.0.3",
+        "chai": "^5.2.0",
+        "mocha": "^11.2.2",
         "nodemon": "^3.1.10",
         "prettier": "^3.5.3",
+        "sinon": "^20.0.0",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.8.3"
