--- a/PromptService/package.json
+++ b/PromptService/package.json
@@ -1,7 +1,7 @@
 {
     "name": "prompt-service",
     "version": "1.0.0",
-    "description": "a node service that will generate prompt using githup repository",
+    "description": "a node service that will generate prompt using github repository",
     "license": "ISC",
     "author": "manish465",
     "type": "commonjs",
@@ -9,11 +9,15 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts"
+        "dev": "nodemon src/index.ts",
+        "test": "mocha -r ts-node/register src/test/**/*.test.ts"
     },
     "devDependencies": {
+        "@types/chai": "^5.2.1",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.1",
+        "@types/mocha": "^10.0.10",
+        "@types/sinon": "^17.0.4",
         "@types/unescape-js": "^1.0.3",
         "chai": "^5.2.0",
         "mocha": "^11.2.2",
