added new end points

--- a/PromptService/package.json
+++ b/PromptService/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts",
+        "dev": "nodemon src/local.ts",
         "test": "mocha -r ts-node/register src/test/**/*.test.ts"
     },
     "devDependencies": {
