--- a/PromptService/package.json
+++ b/PromptService/package.json
@@ -22,6 +22,7 @@
         "@types/supertest": "^6.0.3",
         "@types/unescape-js": "^1.0.3",
         "chai": "^5.2.0",
+        "chai-http": "^5.1.2",
         "mocha": "^11.2.2",
         "nodemon": "^3.1.10",
         "prettier": "^3.5.3",
