--- a/ReadmeService/src/main/resources/application.yml
+++ b/ReadmeService/src/main/resources/application.yml
@@ -16,6 +16,6 @@ spring:
         health-check-interval: 10s
   ai:
     ollama:
-      base-url: http://localhost:11434/v1
+      base-url: http://readme-writer:11434/v1
       chat:
         model: gemma3:1b
