--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ on:
       - master
 
 jobs:
-  build-and-test:
+  prompt-service-tests:
+    name: Run Prompt Service Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -26,6 +27,14 @@ jobs:
         run: npm test
         working-directory: ./PromptService
 
+  readme-service-tests:
+    name: Run Readme Service Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -40,5 +49,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build and run tests with Maven
+      - name: Build and run Spring Boot tests
         run: mvn clean verify
+        working-directory: ./ReadmeService
