--- a/readme-gen-frontend/package.json
+++ b/readme-gen-frontend/package.json
@@ -11,6 +11,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-scripts": "5.0.1",
+        "scss": "^0.2.4",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
@@ -41,6 +42,7 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
-        "@testing-library/user-event": "^14.6.1"
+        "@testing-library/user-event": "^14.6.1",
+        "sass": "^1.87.0"
     }
 }
