--- a/LLM/Dockerfile
+++ b/LLM/Dockerfile
@@ -1,8 +1,10 @@
-FROM ollama/ollama:0.6.7
+FROM alpine/ollama:llama3.2
 
 WORKDIR /app
 COPY Modelfile /app/Modelfile
 COPY entrypoint.sh /app/entrypoint.sh
+
+RUN ls -la /app
 
 RUN chmod +x /app/entrypoint.sh
 
