--- a/readme-gen-frontend/package.json
+++ b/readme-gen-frontend/package.json
@@ -9,6 +9,7 @@
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.3",
         "axios": "^1.9.0",
+        "lodash": "^4.17.21",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-scripts": "5.0.1",
@@ -44,6 +45,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/lodash": "^4.17.16",
         "sass": "^1.87.0"
     }
 }
