--- a/LLM/Dockerfile
+++ b/LLM/Dockerfile
@@ -1,12 +1,6 @@
-FROM alpine/ollama:llama3.2
-
-WORKDIR /app
-COPY Modelfile /app/Modelfile
-COPY entrypoint.sh /app/entrypoint.sh
-
-RUN ls -la /app
-
-RUN chmod +x /app/entrypoint.sh
+FROM ollama/ollama:latest
 
 EXPOSE 11434
-ENTRYPOINT ["/app/entrypoint.sh"]
+
+ENTRYPOINT ["/bin/bash", "-c"]
+CMD ["ollama serve & sleep 5 && ollama pull gemma3:1b && tail -f /dev/null"]
